<resources>
    <string name="app_name">Patrimonio Mobile</string>
    <string name="title_activity_departamento">Departamento</string>
    <string name="title_activity_cad_departamento">Cadastro de Departamento</string>

    <string name="btnPatrimonio">Patrimonio</string>
    <string name="btnActivity_Cadastrar_Departamento">Cadastrar</string>
    <string name="lblDepartamento_Nome">Nome</string>
    <string name="lblDepartamento_Sigla">Sigla</string>
    <string name="btnGravar">Gravar</string>
    <string name="action_settings">Settings</string>
    <string name="mnuCarregar">Carregar dados</string>
    <string name="btnListar">Listar</string>
    <string name="title_activity_listar_departamento">ListarDepartamentoActivity</string>
    <string name="btnEditar">Editar</string>
    <string name="btnExcluir">Excluir</string>
    <string name="title_activity_responsavel">Responsavel</string>
    <string name="msg_bluetooth_nao_suportado">O aparelho bluetooth não é compatível com o aparelho!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lista_dispositivo_bluetooth">ListaDispositivoBluetooth</string>
    <string name="title_activity_listar_bluetooth">ListarBluetoothActivity</string>
    <string name="btnProcurar_Bluetooth">Procurar Dispositivos</string>
    <string name="btnLer_Tag">LER</string>
    <string name="title_activity_cad_responsavel">CadResponsavelActivity</string>
    <string name="title_activity_listar_etiqueta">ListarEtiqueta</string>
    <string name="title_activity_etiqueta_adapter">EtiquetaAdapter</string>
    <string name="lblTotalTags">Lido:</string>
    <string name="title_activity_cad_patrimonio">CadPatrimonioActivity</string>
    <string name="lblDescricaoPatrimonio">Descrição</string>
    <string name="lblIdentificacaoPatrimonio">Identificação</string>
    <string name="lblEstadoPatrimonio">Estado</string>
    <string name="lblLocalPatrimonio">Local</string>
    <string name="lblResponsavelPatrimonio">Responsável</string>
    <string name="hintIdentificacaoPatrimonio">Informe o valor da etiqueta RFID</string>
    <string name="hintEstadoPatrimonio">Informe o estado/situção do objeto</string>
    <string name="title_activity_listar_patrimonio">ListarPatrimonioActivity</string>
    <string name="title_activity_patrimonio_adapter">PatrimonioAdapter</string>
    <string name="title_activity_patrimonio">PatrimonioActivity</string>
    <string name="btnAlterar">Alterar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="mnuEnviar">Enviar dados</string>
    <string name="lblNomePatrimonio">Nome</string>
    <string name="lblStatusPatrimonio">Ativo</string>
    <string name="btnIniciar_Leitor">Iniciar leitor</string>
    <string name="msgCarga">Deseja realizar a carga de dados?</string>
    <string name="opSIM">Sim</string>
    <string name="opNAO">Não</string>
    <string name="msgEnviarCarga">Deseja realizar o envio de dados?</string>
    <string name="msgRegistroSalvo">Registro salvo com sucesso!</string>
    <string name="btnNovaEtiqueta">Criar novo registro</string>
    <string name="btnSelecionarEtiqueta">Usar em registro existente</string>
    <string name="lblDescPatrimonio">Descricao do Patrimonio</string>

</resources>
