<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xgc1986.ripplebutton.widget.RippleButton
        android:id="@+id/btnNovaEtiqueta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnNovaEtiqueta"
        android:textColor="#FFF"
        app:buttonColor="#2196f3"
        app:rippleColor="@android:color/white" />

    <com.xgc1986.ripplebutton.widget.RippleButton
        android:id="@+id/btnSelecionarEtiqueta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSelecionarEtiqueta"
        android:textColor="#FFF"
        app:buttonColor="#2196f3"
        app:rippleColor="@android:color/white" />

    <com.xgc1986.ripplebutton.widget.RippleButton
        android:id="@+id/btnCancelarPatrimonio"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        android:textColor="#FFF"
        app:buttonColor="#2196f3"
        app:rippleColor="@android:color/white" />

</LinearLayout>